--- a/full/source/makefile.w98
+++ b/full/source/makefile.w98
@@ -6,10 +6,10 @@ NULL=
 NULL=nul
 !ENDIF
 
-exeRelDir=.\x64\Release
-exeDbgDir=.\x64\Debug
-dllRelDir=.\blatdll\x64\Release
-dllDbgDir=.\blatdll\x64\Debug
+exeRelDir=.\Win98\Release
+exeDbgDir=.\Win98\Debug
+dllRelDir=.\blatdll\Win98\Release
+dllDbgDir=.\blatdll\Win98\Debug
 
 ALL   : $(exeDbgDir) \
         $(exeRelDir) \
@@ -54,50 +54,66 @@ $(dllDbgDir) :
     @if not exist $(dllDbgDir)\$(NULL) mkdir $(dllDbgDir)
 
 CPP=cl.exe
-exeRel_CPP_PROJ=/nologo /MP /EHsc /MT  /W4         /O1 /Os /favor:blend /Oy /Ob0 /GF /GS- /Gy /D NDEBUG /D WIN64 /D _WIN64 /D UNICODE /D _UNICODE /D _CONSOLE /D GENSOCK_STATIC_LINK                               /D WINVER=$(WINVERTARGET) /Fo$(exeRelDir)\ /Fd$(exeRelDir)\ /FD /c
-exeDbg_CPP_PROJ=/nologo /MP /EHsc /MTd /W4 /Zi /Od                               /GF /GS- /Gy /D _DEBUG /D WIN64 /D _WIN64 /D UNICODE /D _UNICODE /D _CONSOLE /D GENSOCK_STATIC_LINK                               /D WINVER=$(WINVERTARGET) /Fo$(exeDbgDir)\ /Fd$(exeDbgDir)\ /FD /c
-dllRel_CPP_PROJ=/nologo /MP /EHsc /MT  /W4 /vd0    /O1 /Os /favor:blend /Oy /Ob0 /GF /GS- /Gy /D NDEBUG /D WIN64 /D _WIN64 /D UNICODE /D _UNICODE /D _WINDOWS /D GENSOCK_STATIC_LINK /D _USRDLL /D BLATDLL_EXPORTS /D WINVER=$(WINVERTARGET) /Fo$(dllRelDir)\ /Fd$(dllRelDir)\ /FD /c
-dllDbg_CPP_PROJ=/nologo /MP /EHsc /MTd /W4 /Zi /Od                               /GF /GS- /Gy /D _DEBUG /D WIN64 /D _WIN64 /D UNICODE /D _UNICODE /D _WINDOWS /D GENSOCK_STATIC_LINK /D _USRDLL /D BLATDLL_EXPORTS /D WINVER=$(WINVERTARGET) /Fo$(dllDbgDir)\ /Fd$(dllDbgDir)\ /FD /c
+exeRel_CPP_PROJ=/nologo /EHsc /MD  /W4         /O1 /Os /Oy /Ob0 /GF /Gy /D NDEBUG /D WIN32 /D _WIN32 /D MBCS    /D _MBCS    /D _CONSOLE /D GENSOCK_STATIC_LINK                               /D WINVER=$(WINVERTARGET) /Fo$(exeRelDir)\ /Fd$(exeRelDir)\ /FD /c
+exeDbg_CPP_PROJ=/nologo /EHsc /MDd /W4 /Zi /Od                  /GF /Gy /D _DEBUG /D WIN32 /D _WIN32 /D MBCS    /D _MBCS    /D _CONSOLE /D GENSOCK_STATIC_LINK                               /D WINVER=$(WINVERTARGET) /Fo$(exeDbgDir)\ /Fd$(exeDbgDir)\ /FD /c
+dllRel_CPP_PROJ=/nologo /EHsc /MD  /W4 /vd0    /O1 /Os /Oy /Ob0 /GF /Gy /D NDEBUG /D WIN32 /D _WIN32 /D MBCS    /D _MBCS    /D _WINDOWS /D GENSOCK_STATIC_LINK /D _USRDLL /D BLATDLL_EXPORTS /D WINVER=$(WINVERTARGET) /Fo$(dllRelDir)\ /Fd$(dllRelDir)\ /FD /c
+dllDbg_CPP_PROJ=/nologo /EHsc /MDd /W4 /Zi /Od                  /GF /Gy /D _DEBUG /D WIN32 /D _WIN32 /D MBCS    /D _MBCS    /D _WINDOWS /D GENSOCK_STATIC_LINK /D _USRDLL /D BLATDLL_EXPORTS /D WINVER=$(WINVERTARGET) /Fo$(dllDbgDir)\ /Fd$(dllDbgDir)\ /FD /c
 
 .cpp{$(exeRelDir)}.obj::
-   $(CPP) $(exeRel_CPP_PROJ) $<
+   $(CPP) @<<
+   $(exeRel_CPP_PROJ) $<
+<<
 
 .cpp{$(exeDbgDir)}.obj::
-   $(CPP) $(exeDbg_CPP_PROJ) $<
+   $(CPP) @<<
+   $(exeDbg_CPP_PROJ) $<
+<<
 
 .cpp{$(dllRelDir)}.obj::
-   $(CPP) $(dllRel_CPP_PROJ) $<
+   $(CPP) @<<
+   $(dllRel_CPP_PROJ) $<
+<<
 
 .cpp{$(dllDbgDir)}.obj::
-   $(CPP) $(dllDbg_CPP_PROJ) $<
+   $(CPP) @<<
+   $(dllDbg_CPP_PROJ) $<
+<<
 
 .c{$(exeRelDir)}.obj::
-   $(CPP) $(exeRel_CPP_PROJ) $<
+   $(CPP) @<<
+   $(exeRel_CPP_PROJ) $<
+<<
 
 .c{$(exeDbgDir)}.obj::
-   $(CPP) $(exeDbg_CPP_PROJ) $<
+   $(CPP) @<<
+   $(exeDbg_CPP_PROJ) $<
+<<
 
 .c{$(dllRelDir)}.obj::
-   $(CPP) $(dllRel_CPP_PROJ) $<
+   $(CPP) @<<
+   $(dllRel_CPP_PROJ) $<
+<<
 
 .c{$(dllDbgDir)}.obj::
-   $(CPP) $(dllDbg_CPP_PROJ) $<
+   $(CPP) @<<
+   $(dllDbg_CPP_PROJ) $<
+<<
 
 RSC=rc.exe
-exeRel_RSC_PROJ=/nologo /l 0x409 /fo$(exeRelDir)\blat.res /d NDEBUG /d WIN64 /d _WIN64
-exeDbg_RSC_PROJ=/nologo /l 0x409 /fo$(exeDbgDir)\blat.res /d _DEBUG /d WIN64 /d _WIN64
-dllRel_RSC_PROJ=/nologo /l 0x409 /fo$(dllRelDir)\blat.res /d NDEBUG /d WIN64 /d _WIN64
-dllDbg_RSC_PROJ=/nologo /l 0x409 /fo$(dllDbgDir)\blat.res /d _DEBUG /d WIN64 /d _WIN64
+exeRel_RSC_PROJ=/l 0x409 /fo$(exeRelDir)\blat.res /d NDEBUG /d WIN32 /d _WIN32
+exeDbg_RSC_PROJ=/l 0x409 /fo$(exeDbgDir)\blat.res /d _DEBUG /d WIN32 /d _WIN32
+dllRel_RSC_PROJ=/l 0x409 /fo$(dllRelDir)\blat.res /d NDEBUG /d WIN32 /d _WIN32
+dllDbg_RSC_PROJ=/l 0x409 /fo$(dllDbgDir)\blat.res /d _DEBUG /d WIN32 /d _WIN32
 
-#dll_DEF_FILE=.\blatdll\blat.def
+dll_DEF_FILE=.\blatdll\blat.def
 
-LIB64 =lib.exe
-exeRel_LIB64_FLAGS=/nologo /machine:X64 /subsystem:CONSOLE /nologo /out:$(exeRelDir)\blatproj.lib
-exeDbg_LIB64_FLAGS=/nologo /machine:X64 /subsystem:CONSOLE /nologo /out:$(exeDbgDir)\blatproj.lib
-dllRel_LIB64_FLAGS=/nologo /machine:X64 /subsystem:CONSOLE /nologo /out:$(dllRelDir)\blatproj.lib
-dllDbg_LIB64_FLAGS=/nologo /machine:X64 /subsystem:CONSOLE /nologo /out:$(dllDbgDir)\blatproj.lib
+LIB32 =lib.exe
+exeRel_LIB32_FLAGS=/machine:I386 /subsystem:CONSOLE /nologo /out:$(exeRelDir)\blatproj.lib
+exeDbg_LIB32_FLAGS=/machine:I386 /subsystem:CONSOLE /nologo /out:$(exeDbgDir)\blatproj.lib
+dllRel_LIB32_FLAGS=/machine:I386 /subsystem:CONSOLE /nologo /out:$(dllRelDir)\blatproj.lib
+dllDbg_LIB32_FLAGS=/machine:I386 /subsystem:CONSOLE /nologo /out:$(dllDbgDir)\blatproj.lib
 
-exeRel_LIB64_OBJS= \
+exeRel_LIB32_OBJS= \
         $(exeRelDir)\attach.obj   \
         $(exeRelDir)\base64.obj   \
         $(exeRelDir)\blatcgi.obj  \
@@ -120,7 +136,7 @@ exeRel_LIB64_OBJS= \
         $(exeRelDir)\uuencode.obj \
         $(exeRelDir)\yenc.obj
 
-exeDbg_LIB64_OBJS= \
+exeDbg_LIB32_OBJS= \
         $(exeDbgDir)\attach.obj   \
         $(exeDbgDir)\base64.obj   \
         $(exeDbgDir)\blatcgi.obj  \
@@ -143,7 +159,7 @@ exeDbg_LIB64_OBJS= \
         $(exeDbgDir)\uuencode.obj \
         $(exeDbgDir)\yenc.obj
 
-dllRel_LIB64_OBJS= \
+dllRel_LIB32_OBJS= \
         $(dllRelDir)\attach.obj   \
         $(dllRelDir)\base64.obj   \
         $(dllRelDir)\blatcgi.obj  \
@@ -166,7 +182,7 @@ dllRel_LIB64_OBJS= \
         $(dllRelDir)\uuencode.obj \
         $(dllRelDir)\yenc.obj
 
-dllDbg_LIB64_OBJS= \
+dllDbg_LIB32_OBJS= \
         $(dllDbgDir)\attach.obj   \
         $(dllDbgDir)\base64.obj   \
         $(dllDbgDir)\blatcgi.obj  \
@@ -190,79 +206,79 @@ dllDbg_LIB64_OBJS= \
         $(dllDbgDir)\yenc.obj
 
 
-LINK64=link.exe
-exeRel_LINK64_FLAGS=$(exeRelDir)\blatproj.lib libcmt.lib  wsock32.lib kernel32.lib advapi32.lib /nologo /subsystem:console /incremental:no  /pdb:$(exeRelDir)\blat.pdb /map:$(exeRelDir)\blat.map        /STACK:102400 /machine:X64 $(DXP) /nodefaultlib /out:$(exeRelDir)\blat.exe
-exeDbg_LINK64_FLAGS=$(exeDbgDir)\blatproj.lib libcmtd.lib wsock32.lib kernel32.lib advapi32.lib /nologo /subsystem:console /incremental:yes /pdb:$(exeDbgDir)\blat.pdb /map:$(exeDbgDir)\blat.map /debug /STACK:102400 /machine:X64 $(DXP) /nodefaultlib /out:$(exeDbgDir)\blat.exe
-dllRel_LINK64_FLAGS=$(dllRelDir)\blatproj.lib libcmt.lib  wsock32.lib kernel32.lib advapi32.lib /nologo /dll               /incremental:no  /pdb:$(dllRelDir)\blat.pdb /map:$(dllRelDir)\blat.map        /STACK:102400 /machine:X64 $(DXP) /nodefaultlib /out:$(dllRelDir)\blat.dll /implib:$(dllRelDir)\blat.lib
-dllDbg_LINK64_FLAGS=$(dllDbgDir)\blatproj.lib libcmtd.lib wsock32.lib kernel32.lib advapi32.lib /nologo /dll               /incremental:yes /pdb:$(dllDbgDir)\blat.pdb /map:$(dllDbgDir)\blat.map /debug /STACK:102400 /machine:X64 $(DXP) /nodefaultlib /out:$(dllDbgDir)\blat.dll /implib:$(dllDbgDir)\blat.lib
+LINK32=link.exe
+exeRel_LINK32_FLAGS=$(exeRelDir)\blatproj.lib msvcrt.lib  wsock32.lib kernel32.lib advapi32.lib /nologo /subsystem:console /incremental:no  /pdb:none                  /map:$(exeRelDir)\blat.map        /machine:I386 $(DXP) /nodefaultlib                      /out:$(exeRelDir)\blat.exe
+exeDbg_LINK32_FLAGS=$(exeDbgDir)\blatproj.lib msvcrtd.lib wsock32.lib kernel32.lib advapi32.lib /nologo /subsystem:console /incremental:yes /pdb:$(exeDbgDir)\blat.pdb /map:$(exeDbgDir)\blat.map /debug /machine:I386 $(DXP) /nodefaultlib                      /out:$(exeDbgDir)\blat.exe
+dllRel_LINK32_FLAGS=$(dllRelDir)\blatproj.lib msvcrt.lib  wsock32.lib kernel32.lib advapi32.lib /nologo /dll               /incremental:no  /pdb:none                  /map:$(dllRelDir)\blat.map        /machine:I386 $(DXP) /nodefaultlib /def:$(dll_DEF_FILE) /out:$(dllRelDir)\blat.dll /implib:$(dllRelDir)\blat.lib
+dllDbg_LINK32_FLAGS=$(dllDbgDir)\blatproj.lib msvcrtd.lib wsock32.lib kernel32.lib advapi32.lib /nologo /dll               /incremental:yes /pdb:$(dllDbgDir)\blat.pdb /map:$(dllDbgDir)\blat.map /debug /machine:I386 $(DXP) /nodefaultlib /def:$(dll_DEF_FILE) /out:$(dllDbgDir)\blat.dll /implib:$(dllDbgDir)\blat.lib
 
-exeRel_LINK64_OBJS= \
+exeRel_LINK32_OBJS= \
         $(exeRelDir)\blat.obj \
         $(exeRelDir)\blat.res
 
-exeDbg_LINK64_OBJS= \
+exeDbg_LINK32_OBJS= \
         $(exeDbgDir)\blat.obj \
         $(exeDbgDir)\blat.res
 
-dllRel_LINK64_OBJS= \
+dllRel_LINK32_OBJS= \
         $(dllRelDir)\blat.obj \
         $(dllRelDir)\blat.res
 
-dllDbg_LINK64_OBJS= \
+dllDbg_LINK32_OBJS= \
         $(dllDbgDir)\blat.obj \
         $(dllDbgDir)\blat.res
 
 
-$(exeRelDir)\blatproj.lib : $(exeRelDir) $(exe_DEF_FILE) $(exeRel_LIB64_OBJS)
+$(exeRelDir)\blatproj.lib : $(exeRelDir) $(exe_DEF_FILE) $(exeRel_LIB32_OBJS)
     -@if exist $(exeRelDir)\blatproj.lib erase $(exeRelDir)\blatproj.lib
     -@if exist $(exeRelDir)\blat.obj erase $(exeRelDir)\blat.obj
-    $(LIB64) @<<
-  $(exeRel_LIB64_FLAGS) $(exeRel_LIB64_OBJS)
+    $(LIB32) @<<
+  $(exeRel_LIB32_FLAGS) $(exeRel_LIB32_OBJS)
 <<
 
 $(exeRelDir)\blat.exe : $(exeRelDir) $(exe_DEF_FILE) $(exeRelDir)\blatproj.lib \
-                        $(exeRel_LINK64_OBJS)
-    $(LINK64) @<<
-  $(exeRel_LINK64_FLAGS) $(exeRel_LINK64_OBJS)
+                        $(exeRel_LINK32_OBJS)
+    $(LINK32) @<<
+  $(exeRel_LINK32_FLAGS) $(exeRel_LINK32_OBJS)
 <<
 
-$(exeDbgDir)\blatproj.lib : $(exeDbgDir) $(exe_DEF_FILE) $(exeDbg_LIB64_OBJS)
+$(exeDbgDir)\blatproj.lib : $(exeDbgDir) $(exe_DEF_FILE) $(exeDbg_LIB32_OBJS)
     -@if exist $(exeDbgDir)\blatproj.lib erase $(exeDbgDir)\blatproj.lib
     -@if exist $(exeDbgDir)\blat.obj erase $(exeDbgDir)\blat.obj
-    $(LIB64) @<<
-  $(exeDbg_LIB64_FLAGS) $(exeDbg_LIB64_OBJS)
+    $(LIB32) @<<
+  $(exeDbg_LIB32_FLAGS) $(exeDbg_LIB32_OBJS)
 <<
 
 $(exeDbgDir)\blat.exe : $(exeDbgDir) $(exe_DEF_FILE) $(exeDbgDir)\blatproj.lib \
-                        $(exeDbg_LINK64_OBJS)
-    $(LINK64) @<<
-  $(exeDbg_LINK64_FLAGS) $(exeDbg_LINK64_OBJS)
+                        $(exeDbg_LINK32_OBJS)
+    $(LINK32) @<<
+  $(exeDbg_LINK32_FLAGS) $(exeDbg_LINK32_OBJS)
 <<
 
-$(dllRelDir)\blatproj.lib : $(dllRelDir) $(dll_DEF_FILE) $(dllRel_LIB64_OBJS)
+$(dllRelDir)\blatproj.lib : $(dllRelDir) $(dll_DEF_FILE) $(dllRel_LIB32_OBJS)
     -@if exist $(dllRelDir)\blatproj.lib erase $(dllRelDir)\blatproj.lib
     -@if exist $(dllRelDir)\blat.obj erase $(dllRelDir)\blat.obj
-    $(LIB64) @<<
-  $(dllRel_LIB64_FLAGS) $(dllRel_LIB64_OBJS)
+    $(LIB32) @<<
+  $(dllRel_LIB32_FLAGS) $(dllRel_LIB32_OBJS)
 <<
 
 $(dllRelDir)\blat.dll : $(dllRelDir) $(dll_DEF_FILE) $(dllRelDir)\blatproj.lib \
-                        $(dllRel_LINK64_OBJS)
-    $(LINK64) @<<
-  $(dllRel_LINK64_FLAGS) $(dllRel_LINK64_OBJS)
+                        $(dllRel_LINK32_OBJS)
+    $(LINK32) @<<
+  $(dllRel_LINK32_FLAGS) $(dllRel_LINK32_OBJS)
 <<
 
-$(dllDbgDir)\blatproj.lib : $(dllDbgDir) $(dll_DEF_FILE) $(dllDbg_LIB64_OBJS)
+$(dllDbgDir)\blatproj.lib : $(dllDbgDir) $(dll_DEF_FILE) $(dllDbg_LIB32_OBJS)
     -@if exist $(dllDbgDir)\blatproj.lib erase $(dllDbgDir)\blatproj.lib
     -@if exist $(dllDbgDir)\blat.obj erase $(dllDbgDir)\blat.obj
-    $(LIB64) @<<
-  $(dllDbg_LIB64_FLAGS) $(dllDbg_LIB64_OBJS)
+    $(LIB32) @<<
+  $(dllDbg_LIB32_FLAGS) $(dllDbg_LIB32_OBJS)
 <<
 
 $(dllDbgDir)\blat.dll : $(dllDbgDir) $(dll_DEF_FILE) $(dllDbgDir)\blatproj.lib \
-                        $(dllDbg_LINK64_OBJS)
-    $(LINK64) @<<
-  $(dllDbg_LINK64_FLAGS) $(dllDbg_LINK64_OBJS)
+                        $(dllDbg_LINK32_OBJS)
+    $(LINK32) @<<
+  $(dllDbg_LINK32_FLAGS) $(dllDbg_LINK32_OBJS)
 <<
 
 
@@ -451,6 +467,7 @@ $(dllDbgDir)\options.obj      : .\options.cpp     $(dllDbgDir) .\blat.h .\buf.h 
 $(dllDbgDir)\parsing.obj      : .\parsing.cpp     $(dllDbgDir) .\blat.h .\buf.h
 
 $(dllDbgDir)\punycode.obj     : .\punycode.cpp    $(dllDbgDir) .\blat.h .\buf.h .\punycode.h
+
 $(dllDbgDir)\reg.obj          : .\reg.cpp         $(dllDbgDir) .\blat.h .\buf.h
 
 $(dllDbgDir)\sendnntp.obj     : .\sendnntp.cpp    $(dllDbgDir) .\blat.h .\buf.h .\gensock.h .\winfile.h
