--- a/full/source/blat.vcproj
+++ b/full/source/blat.vcproj
@@ -339,7 +339,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN64,_WIN64,_DEBUG,_CONSOLE,WINVER=0x0400"
+				PreprocessorDefinitions="WIN64,_WIN64,UNICODE,_UNICODE,_DEBUG,_CONSOLE,WINVER=0x0501"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="1"
 				StructMemberAlignment="0"
@@ -468,6 +468,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\punycode.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\reg.cpp"
 				>
 			</File>
@@ -513,6 +517,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\declarations.h"
+				>
+			</File>
+			<File
 				RelativePath=".\gensock.h"
 				>
 			</File>
@@ -522,6 +530,22 @@
 			</File>
 			<File
 				RelativePath=".\gssapi_generic.h"
+				>
+			</File>
+			<File
+				RelativePath=".\gssfuncs.h"
+				>
+			</File>
+			<File
+				RelativePath=".\md5.h"
+				>
+			</File>
+			<File
+				RelativePath=".\punycode.h"
+				>
+			</File>
+			<File
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
