--- a/full/source/blatdll/blatdll.vcproj
+++ b/full/source/blatdll/blatdll.vcproj
@@ -478,6 +478,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\punycode.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\reg.cpp"
 				>
 			</File>
@@ -523,6 +527,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\declarations.h"
+				>
+			</File>
+			<File
 				RelativePath="..\gensock.h"
 				>
 			</File>
@@ -532,6 +540,18 @@
 			</File>
 			<File
 				RelativePath="..\gssapi_generic.h"
+				>
+			</File>
+			<File
+				RelativePath="..\gssfuncs.h"
+				>
+			</File>
+			<File
+				RelativePath="..\md5.h"
+				>
+			</File>
+			<File
+				RelativePath="..\punycode.h"
 				>
 			</File>
 			<File
